RIA-7918 set typeC facility for S94B hearing request and updates